--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<svg-edit></svg-edit>
+<app-svg-edit></app-svg-edit>
 <p>Click on the canvas to start drawing. Click and drag existing vertices to move them around. Desktop only.</p>
 
