Frontend-Prototype + Material Design

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,16 @@
+<nav class="navbar navbar-light green sticky-top navbar-dark indigo">
+    <div class="navbar-brand">IeExplorer</div>
+</nav>
+
+<br><br>
+
+<app-home></app-home>
+
+
+
 <app-svg-edit></app-svg-edit>
 <p>Click on the canvas to start drawing. Click and drag existing vertices to move them around. Desktop only.</p>
+
+
+<app-content-footer></app-content-footer>
 
