moved SvgEditComponent-Template into own component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,12 +4,7 @@
 
 <br><br>
 
-<app-home></app-home>
-
-
-
-<app-svg-edit></app-svg-edit>
-<p>Click on the canvas to start drawing. Click and drag existing vertices to move them around. Desktop only.</p>
+<router-outlet></router-outlet>
 
 
 <app-content-footer></app-content-footer>
