--- a/src/app/svg-edit/svg-edit.component.html
+++ b/src/app/svg-edit/svg-edit.component.html
@@ -3,3 +3,4 @@
     <svg:line *ngFor="let line of lines" stroke="black" [attr.x1]="line[0][0]" [attr.y1]="line[0][1]"
               [attr.x2]="line[1][0]" [attr.y2]="line[1][1]"></svg:line>
 </svg>
+<p>Click on the canvas to start drawing. Click and drag existing vertices to move them around. Desktop only.</p>
