hotfix: added button for navigation

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,5 +9,5 @@
 </div>
 
 <div class="text-center">
-          <button class="btn btn-default btn-outline waves-effect">Go To Editor? (Development Mode :P)</button>
-      </div>
+    <a routerLink="/editor"><button class="btn btn-default btn-outline waves-effect">Go To Editor? (Development Mode :P)</button></a>
+</div>
