--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,11 @@
-<app-svg-edit></app-svg-edit>
-<p>Click on the canvas to start drawing. Click and drag existing vertices to move them around. Desktop only.</p>
+<md-toolbar color="primary">
+    <span>IeClient</span>
 
+    <span class="example-spacer"></span>
+    <md-icon class="example-icon">favorite</md-icon>
+    <md-icon class="example-icon">delete</md-icon>
+</md-toolbar>
+
+<br><br>
+
+<router-outlet></router-outlet>
