--- a/src/app/svg-edit/svg-edit.component.html
+++ b/src/app/svg-edit/svg-edit.component.html
@@ -1,5 +1,13 @@
 <svg style="border:1px red dotted;width:500px" viewBox="0 0 500 500" (mousemove)="mouseMove($event)"
-     (mouseup)="mouseClick($event)">
-    <svg:line *ngFor="let line of lines" stroke="black" [attr.x1]="line[0][0]" [attr.y1]="line[0][1]"
-              [attr.x2]="line[1][0]" [attr.y2]="line[1][1]"></svg:line>
+     (mouseup)="mouseUp($event)">
+     <svg:defs>
+        <svg:marker id="circle" markerWidth="8" markerHeight="8" refX="5" refY="5">
+            <svg:circle cx="5" cy="5" r="3" style="stroke: none; fill:#000000;"/>
+        </svg:marker>
+      </svg:defs>
+    <svg:line *ngFor="let line of structure[layer].lines" stroke="black" [attr.x1]="line[0][0]" [attr.y1]="line[0][1]"
+              [attr.x2]="line[1][0]" [attr.y2]="line[1][1]" marker-end="url(#circle)" marker-start="url(#circle)"></svg:line>
 </svg>
+<button (click)="tool=0">Edit</button>
+<button (click)="tool=1">Move</button>
+<button (click)="tool=2">Door</button>
