--- a/src/styles.css
+++ b/src/styles.css
@@ -5,13 +5,12 @@
 
 
 body {
-    width: 470px;
     padding: 5 5 5 5;
     margin-right: 2em;
 }
 
 .example-card {
-    width: 400px;
+    max-width: 400px;
     padding-top: 5px;
 }
 
