editor canvas offset

--- a/src/app/svg-edit/svg-edit.component.html
+++ b/src/app/svg-edit/svg-edit.component.html
@@ -1,4 +1,4 @@
-<svg style="border:1px red dotted;width:500px" viewBox="0 0 500 500" (mousemove)="mouseMove($event)"
+<svg style="border:1px red dotted;width:500px;" viewBox="0 0 500 500" (mousemove)="mouseMove($event)" id="editorCanvas"
      (mouseup)="mouseUp($event)">
      <svg:defs>
         <svg:marker id="circle" markerWidth="8" markerHeight="8" refX="5" refY="5">
