fixed Lint errors

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -33,8 +33,8 @@
     <md-card-content>
         <md-progress-spinner
           style="margin: 0 10px"
-          [color]="primary"
-          [mode]="determinate"
+          [color]="'primary'"
+          [mode]="'determinate'"
           [value]="82">
       </md-progress-spinner>
     </md-card-content>
