organized folder structure. Added Model Data Service, Maps List and Request Service.

--- a/src/app/cmp/home.component.html
+++ b/src/app/cmp/home.component.html
@@ -18,6 +18,7 @@
 <md-card>
     <md-card-content>
       <button md-fab [routerLink]="['/editor', '45fad']">Editor</button>
+      <button md-fab [routerLink]="['/maps']">Maps</button>
 
           <md-slide-toggle
                           class="example-margin"
