fix errors (md-* --> mat-*; private member access --> public)

--- a/src/app/cmp/home.component.html
+++ b/src/app/cmp/home.component.html
@@ -15,28 +15,28 @@
 
 <br>
 
-<md-card>
-    <md-card-content>
-      <button md-fab [routerLink]="['/editor', '45fad']">Editor</button>
-      <button md-fab [routerLink]="['/maps']">Maps</button>
+<mat-card>
+    <mat-card-content>
+      <button mat-fab [routerLink]="['/editor', '45fad']">Editor</button>
+      <button mat-fab [routerLink]="['/maps']">Maps</button>
 
-          <md-slide-toggle
+          <mat-slide-toggle
                           class="example-margin"
                           color="accent"
                           checked="true"
                           disabled="false">
                         Slide me!
-                      </md-slide-toggle>
-  </md-card-content>
-</md-card>
+                      </mat-slide-toggle>
+  </mat-card-content>
+</mat-card>
 
-<md-card>
-    <md-card-content>
-        <md-progress-spinner
+<mat-card>
+    <mat-card-content>
+        <mat-progress-spinner
           style="margin: 0 10px"
           [color]="'primary'"
           [mode]="'determinate'"
           [value]="82">
-      </md-progress-spinner>
-    </md-card-content>
-</md-card>
+      </mat-progress-spinner>
+    </mat-card-content>
+</mat-card>
