--- a/src/app/cmp/login.component.html
+++ b/src/app/cmp/login.component.html
@@ -1,32 +1,32 @@
-<md-card class="example-card">
-    <md-card-header>
-        <md-card-title>Sign In</md-card-title>
-    </md-card-header>
+<mat-card class="example-card">
+    <mat-card-header>
+        <mat-card-title>Sign In</mat-card-title>
+    </mat-card-header>
 
 
-    <md-card-content>
+    <mat-card-content>
         <table class="example-full-width" cellspacing="0">
             <tr>
                 <td>
-                    <md-form-field class="example-full-width">
-                        <input mdInput placeholder="Username">
-                    </md-form-field>
+                    <mat-form-field class="example-full-width">
+                        <input matInput placeholder="Username">
+                    </mat-form-field>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <md-form-field class="example-full-width">
-                        <input mdInput placeholder="Password">
-                    </md-form-field>
+                    <mat-form-field class="example-full-width">
+                        <input matInput placeholder="Password">
+                    </mat-form-field>
                 </td>
             </tr>
         </table>
-  </md-card-content>
+  </mat-card-content>
 
-  <md-card-actions>
-  </md-card-actions>
+  <mat-card-actions>
+  </mat-card-actions>
 
-  <md-card-footer>
+  <mat-card-footer>
 
-  </md-card-footer>
-</md-card>
+  </mat-card-footer>
+</mat-card>
