--- a/src/app/cmp/maps.component.html
+++ b/src/app/cmp/maps.component.html
@@ -1,14 +1,14 @@
-<md-card>
-    <md-card-header>
-        <md-card-title>Maps List</md-card-title>
-    </md-card-header>
+<mat-card>
+    <mat-card-header>
+        <mat-card-title>Maps List</mat-card-title>
+    </mat-card-header>
 
 
-    <md-card-content>
+    <mat-card-content>
 
         <!-- two line list -->
-        <md-list>
-          <md-list-item *ngFor="let map of modelSvc.mapsList">
+        <mat-list>
+          <mat-list-item *ngFor="let map of modelSvc.mapsList">
             <table>
 
             </table>
@@ -16,14 +16,14 @@
             <p mdLine>
               <span> {{map.id}} </span>
             </p>
-          </md-list-item>
-        </md-list>
-    </md-card-content>
+          </mat-list-item>
+        </mat-list>
+    </mat-card-content>
 
-    <md-card-actions>
-    </md-card-actions>
+    <mat-card-actions>
+    </mat-card-actions>
 
-    <md-card-footer>
+    <mat-card-footer>
 
-    </md-card-footer>
-</md-card>
+    </mat-card-footer>
+</mat-card>
