--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
-<md-toolbar color="primary">
+<mat-toolbar color="primary">
     <span>IeClient</span>
 
     <span class="example-spacer"></span>
-    <md-icon class="example-icon">favorite</md-icon>
-    <md-icon class="example-icon">delete</md-icon>
-</md-toolbar>
+    <mat-icon class="example-icon">favorite</mat-icon>
+    <mat-icon class="example-icon">delete</mat-icon>
+</mat-toolbar>
 
 <br><br>
 
