--- a/src/app/cmp/updates.component.html
+++ b/src/app/cmp/updates.component.html
@@ -1,22 +1,22 @@
 
 
 
-<md-card class="example-card">
-  <md-card-header md-colors="::{backgroundColor: 'default-primary-700'}">
-    <div md-card-avatar class="profile-image" style="background-image: url('./../../res/img/maintenance-icon.jpg')"></div>
-    <md-card-title>Upcoming Server Maintenance!</md-card-title>
-    <md-card-subtitle>Nooo...</md-card-subtitle>
-  </md-card-header>
-  <img md-card-image class="content-image" src="./../../res/img/Failed-Servers.jpg">
-  <md-card-content>
+<mat-card class="example-card">
+  <mat-card-header mat-colors="::{backgroundColor: 'default-primary-700'}">
+    <div mat-card-avatar class="profile-image" style="background-image: url('./../../res/img/maintenance-icon.jpg')"></div>
+    <mat-card-title>Upcoming Server Maintenance!</mat-card-title>
+    <mat-card-subtitle>Nooo...</mat-card-subtitle>
+  </mat-card-header>
+  <img mat-card-image class="content-image" src="./../../res/img/Failed-Servers.jpg">
+  <mat-card-content>
     <p>
       On 4th of July, our Servers will be down temporarily.
     </p>
-  </md-card-content>
-  <md-card-actions>
+  </mat-card-content>
+  <mat-card-actions>
 
-  </md-card-actions>
-  <md-card-footer>
+  </mat-card-actions>
+  <mat-card-footer>
       <p style="padding: 10px">02/Apr/2017 19:05</p>
-  </md-card-footer>
-</md-card>
+  </mat-card-footer>
+</mat-card>
