Added API endpoint for map details. Added Edit-Button in Map list. Added home button. Added Fallback function in case of errored API request.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,10 @@
 <mat-toolbar color="primary">
-    <span>IeClient</span>
+    <span>Indoor Explorer Client</span>
 
     <span class="example-spacer"></span>
-    <mat-icon class="example-icon">favorite</mat-icon>
-    <mat-icon class="example-icon">delete</mat-icon>
+    <button mat-fab [routerLink]="['/home']">
+        <mat-icon class="example-icon" color="'acccent'">home</mat-icon>
+    </button>
 </mat-toolbar>
 
 <br><br>
