Cleanup of Frontend Design. Fixed some layouts and buttons.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
     <span>Indoor Explorer Client</span>
 
     <span class="example-spacer"></span>
-    <button mat-fab [routerLink]="['/home']">
+    <button mat-icon-button [routerLink]="['/home']">
         <mat-icon class="example-icon" color="'acccent'">home</mat-icon>
     </button>
 </mat-toolbar>
