--- a/src/app/cmp/login.component.html
+++ b/src/app/cmp/login.component.html
@@ -1,30 +1,22 @@
 <mat-card class="example-card">
     <mat-card-header>
-        <mat-card-title><h3>Sign In</h3></mat-card-title>
+        <mat-card-title><h3>Login via</h3></mat-card-title>
     </mat-card-header>
 
 
     <mat-card-content>
-        <table cellspacing="0" style="width: 100%; padding-left: 30px">
-
-            <tr>
-                <td>
-                    <mat-form-field class="example-full-width">
-                        <input matInput placeholder="Username" [(ngModel)]="usrname">
-                    </mat-form-field>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <mat-form-field class="example-full-width">
-                        <input matInput placeholder="Password" [(ngModel)]="psswd">
-                    </mat-form-field>
-                </td>
-            </tr>
-            <tr>
-                <button mat-raised-button color="primary">Login</button>
-            </tr>
-        </table>
+        <div fxLayout="row" fxLayoutAlign="space-evenly center" style="width: 100%; padding-left: 50px">
+            <div class="item item-1" fxFlex="40%" align="center">
+                <button mat-raised-button (click)="performLogin('nubenum')" color="primary">
+                    Nubenum
+                </button>
+            </div>
+          <div class="item item-2" fxFlex="40%" align="center">
+              <button mat-raised-button (click)="performLogin('github')" color="primary">
+                  Github
+              </button>
+          </div>
+      </div>
   </mat-card-content>
 
   <mat-card-actions>
