--- a/src/app/cmp/maps.component.html
+++ b/src/app/cmp/maps.component.html
@@ -20,6 +20,9 @@
                             <div class="item item-3" fxFlex="20%" align="center">
                                 <h3>Actions</h3>
                             </div>
+                            <div class="item item-4" fxFlex="20%" align="center">
+                                <h3>Favorite</h3>
+                            </div>
                         </div>
                     </mat-card-content>
                 </mat-card>
@@ -42,6 +45,11 @@
                                 <button mat-raised-button [routerLink]="['/editor', '' + map.id]" color="primary">
                                     Edit
                                 </button>
+                            </div>
+                            <div class="item item-4" fxFlex="20%" align="center">
+                                <button mat-icon-button (click)="setFavorite(map.id)" [ngClass]="'mat-icon-button' + (map.favorite? ' mat-accent' : '')">
+                                  <mat-icon class="example-icon">favorite</mat-icon>
+                              </button>
                             </div>
                         </div>
                     </mat-card-content>
