--- a/src/app/svg-edit/svg-edit.component.html
+++ b/src/app/svg-edit/svg-edit.component.html
@@ -5,10 +5,11 @@
             <svg:circle cx="5" cy="5" r="3" style="stroke: none; fill:#000000;"/>
         </svg:marker>
       </svg:defs>
-    <svg:line *ngFor="let wall of structure[level].walls" stroke="black" [attr.x1]="wall.a[0]" [attr.y1]="wall.a[1]" [attr.x2]="wall.b[0]" [attr.y2]="wall.b[1]" marker-end="url(#circle)" marker-start="url(#circle)"></svg:line>
-    <svg:rect *ngFor="let door of structure[level].doors" stroke="black" fill="none" [attr.x]="door.pos[0]-15" [attr.y]="door.pos[1]-5" width="30" height="10" [attr.transform]="'rotate('+getRotation(door.pos)+' '+door.pos[0]+' '+door.pos[1]+')'"></svg:rect>
+    <svg:line *ngFor="let wall of modelSvc.curEditMap.map[modelSvc.curEditMapLevel].walls" stroke="black" [attr.x1]="wall.a[0]" [attr.y1]="wall.a[1]" [attr.x2]="wall.b[0]" [attr.y2]="wall.b[1]" marker-end="url(#circle)" marker-start="url(#circle)"></svg:line>
+    <svg:rect *ngFor="let door of modelSvc.curEditMap.map[modelSvc.curEditMapLevel].doors" stroke="black" fill="none" [attr.x]="door.pos[0]-15" [attr.y]="door.pos[1]-5" width="30" height="10" [attr.transform]="'rotate('+getRotation(door.pos)+' '+door.pos[0]+' '+door.pos[1]+')'"></svg:rect>
 </svg>
 
 <button (click)="tool=0">Edit</button>
 <button (click)="tool=1">Move</button>
 <button (click)="tool=2">Door</button>
+<button (click)="saveCurrentMap()">Save</button>
