work in progress

--- a/src/app/svg-edit/svg-edit.component.html
+++ b/src/app/svg-edit/svg-edit.component.html
@@ -1,12 +1,16 @@
 <svg style="border:1px red dotted;width:500px;" viewBox="0 0 500 500" (mousemove)="mouseMove($event)" id="editorCanvas"
-     (mouseup)="mouseUp($event)">
-     <svg:defs>
+     (mouseup)="mouseUp($event)" xmlns:svg="http://www.w3.org/2000/svg" version="1.2">
+    <svg:defs>
         <svg:marker id="circle" markerWidth="8" markerHeight="8" refX="5" refY="5">
             <svg:circle cx="5" cy="5" r="3" style="stroke: none; fill:#000000;"/>
         </svg:marker>
-      </svg:defs>
-    <svg:line *ngFor="let wall of modelSvc.curEditMap.map[modelSvc.curEditMapLevel].walls" stroke="black" [attr.x1]="wall.a[0]" [attr.y1]="wall.a[1]" [attr.x2]="wall.b[0]" [attr.y2]="wall.b[1]" marker-end="url(#circle)" marker-start="url(#circle)"></svg:line>
-    <svg:rect *ngFor="let door of modelSvc.curEditMap.map[modelSvc.curEditMapLevel].doors" stroke="black" fill="none" [attr.x]="door.pos[0]-15" [attr.y]="door.pos[1]-5" width="30" height="10" [attr.transform]="'rotate('+getRotation(door.pos)+' '+door.pos[0]+' '+door.pos[1]+')'"></svg:rect>
+    </svg:defs>
+    <svg:line *ngFor="let wall of modelSvc.curEditMap.map[modelSvc.curEditMapLevel].walls" stroke="black"
+              [attr.x1]="wall.a[0]" [attr.y1]="wall.a[1]" [attr.x2]="wall.b[0]" [attr.y2]="wall.b[1]"
+              marker-end="url(#circle)" marker-start="url(#circle)" />
+    <svg:rect *ngFor="let door of modelSvc.curEditMap.map[modelSvc.curEditMapLevel].doors" stroke="black" fill="none"
+              [attr.x]="door.pos[0]-15" [attr.y]="door.pos[1]-5" width="30" height="10"
+              [attr.transform]="'rotate('+getRotation(door.pos)+' '+door.pos[0]+' '+door.pos[1]+')'" />
 </svg>
 
 <button (click)="tool=0">Edit</button>
