Editor OOP Refactoring milestone: Move-Tool working

--- a/src/app/svg-edit/svg-edit.component.html
+++ b/src/app/svg-edit/svg-edit.component.html
@@ -2,34 +2,33 @@
      (mouseup)="mouse.onMouseUp($event)" (mousedown)="mouse.onMouseDown($event)" (mousemove)="mouse.onMouseMove($event)"
      xmlns:svg="http://www.w3.org/2000/svg" version="1.2">
 
-    <svg:g *ngIf="currentFloor">
+    <svg:g *ngIf="floor">
         <svg:defs>
             <svg:marker id="circle" markerWidth="8" markerHeight="8" refX="5" refY="5">
                 <svg:circle cx="5" cy="5" r="3" style="stroke: none; fill:#000000;"/>
             </svg:marker>
         </svg:defs>
 
-        <!--
-        <svg:line *ngFor="let wall of currentFloor.getWalls()" stroke="black"
+        <svg:line *ngFor="let wall of floor.walls" stroke="black"
                   [attr.x1]="wall.p1.x" [attr.y1]="wall.p1.y" [attr.x2]="wall.p2.x" [attr.y2]="wall.p2.y"
                   marker-end="url(#circle)" marker-start="url(#circle)"/>
-        <svg:line *ngFor="let portal of currentFloor.portals" stroke="green" stroke-width="5"
+        <svg:line *ngFor="let portal of floor.portals" stroke="green" stroke-width="5"
                   [attr.x1]="portal.p1.x" [attr.y1]="portal.p1.y" [attr.x2]="portal.p2.x" [attr.y2]="portal.p2.y"
                   marker-end="url(#circle)" marker-start="url(#circle)"/>
-         -->
     </svg:g>
 
-    <text #loadingText x="50%" y="50%" alignment-baseline="middle" text-anchor="middle" font-size="40">
+    <text *ngIf="!floor" x="50%" y="50%" alignment-baseline="middle" text-anchor="middle" font-size="40">
         Bitte warten...
     </text>
 
 </svg>
 
-<div *ngIf="currentFloor">
-    <pre>{{currentFloor|json}}</pre>
+<div>
+    <h3>Toolbox</h3>
+    <!--<button (click)="tool=0">Edit</button>-->
+    <button (click)="selectMoveTool()">Move</button>
+    <!--<button (click)="tool=2">Door</button>-->
+    <!--<button (click)="saveCurrentMap()">Save</button>-->
+    <p>Selected: {{mouse.tool.name}}</p>
 </div>
 
-<button (click)="tool=0">Edit</button>
-<button (click)="tool=1">Move</button>
-<button (click)="tool=2">Door</button>
-<!--<button (click)="saveCurrentMap()">Save</button>-->
