Fix Map list, improve toolbox, adapt json formats

--- a/src/app/cmp/maps.component.html
+++ b/src/app/cmp/maps.component.html
@@ -30,7 +30,7 @@
 
             <br><br>
 
-            <mat-list-item *ngFor="let map of modelSvc.mapsList; let index = i;">
+            <mat-list-item *ngFor="let map of maps">
 
                 <mat-card>
                     <mat-card-content>
