--- a/src/app/svg-edit/svg-edit.component.css
+++ b/src/app/svg-edit/svg-edit.component.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-flow: row wrap;
     justify-content: space-around;
-    align-items: stretch;
+    align-items: flex-start;
     align-content: space-around;
 }
 
