--- a/src/app/svg-edit/svg-edit.component.html
+++ b/src/app/svg-edit/svg-edit.component.html
@@ -27,13 +27,25 @@
 
 </svg>
 
-<div id="toolbox">
+<form #toolbox id="toolbox">
     <h3>Toolbox</h3>
-    <button (click)="selectMoveTool()">Move</button>
-    <button (click)="selectLineTool()">Edit</button>
-    <!--<button (click)="tool=2">Door</button>-->
+    <button class="toolbutton" [style.background-color]="mouse.tool.name=='Move Point' ? 'cyan' : ''"
+            (click)="selectMoveTool()">Move
+    </button>
+    <button class="toolbutton" [style.background-color]="mouse.tool.name=='Draw Wall' ? 'cyan' : ''"
+            (click)="selectWallDrawTool()">Wall
+    </button>
+    <button class="toolbutton" [style.background-color]="mouse.tool.name=='Draw Portal' ? 'cyan' : ''"
+            (click)="selectPortalDrawTool()">Portal
+    </button>
     <!--<button (click)="saveCurrentMap()">Save</button>-->
     <p>Selected: {{mouse.tool.name}} ({{mouse.x}} | {{mouse.y}})</p>
-    <p>Stats: {{floor.walls.length}} Walls, {{floor.portals.length}} Portals, {{floor.getAllPoints().length}} Points</p>
-</div>
+    <p>
+        Stats:
+        {{floor?.walls.length || 0}} Walls,
+        {{floor?.portals.length || 0}} Portals,
+        {{floor?.getAllPoints().length || 0}} Points
+    </p>
+    <pre>{{this?.floor | json}}</pre>
+</form>
 
