--- a/src/app/svg-edit/svg-edit.component.html
+++ b/src/app/svg-edit/svg-edit.component.html
@@ -36,10 +36,12 @@
         </mat-radio-button>
     </mat-radio-group>
 
-    <fieldset>
-        <legend>Actions</legend>
-        <button class="actionbutton" (click)="saveCurrentMap()">Save</button>
-    </fieldset>
+    <br>
+    <div style="padding-top: 20px">
+        <button mat-raised-button (click)="saveCurrentMap()" color="accent">
+            Save
+        </button>
+    </div>
     <p>Selected: {{mouse.tool.name}} ({{mouse.x}} | {{mouse.y}})</p>
     <p>
         Stats:
