Disallow the browser from dragging the SVG image

--- a/src/app/svg-edit/svg-edit.component.css
+++ b/src/app/svg-edit/svg-edit.component.css
@@ -10,6 +10,9 @@
     flex: 0 0 auto;
     width: 500px;
     border: 1px red dotted;
+    user-select: none;
+    user-drag: none;
+    -webkit-user-drag: none;
 }
 
 #toolbox {
