--- a/src/styles.css
+++ b/src/styles.css
@@ -7,17 +7,13 @@
 }
 
 body {
-    padding: 5px 5px 5px 5px;
-    margin-right: 2em;
+    padding: 0;
+    margin: 0;
 }
 
 .example-card {
     max-width: 400px;
     padding-top: 5px;
-}
-
-.example-icon {
-    padding: 0 14px;
 }
 
 .example-spacer {
