--- a/src/styles.css
+++ b/src/styles.css
@@ -16,6 +16,10 @@ body {
     padding-top: 5px;
 }
 
+.mat-button.tool-button {
+    display: block;
+}
+
 .example-spacer {
     flex: 1 1 auto;
 }
