--- a/src/app/svg-edit/svg-edit.component.html
+++ b/src/app/svg-edit/svg-edit.component.html
@@ -68,6 +68,21 @@
             <mat-icon aria-label="Fit to Viewport">zoom_out_map</mat-icon>
         </button>
     </p>
+
+    <h4>Floors</h4>
+    <p>
+        <button mat-icon-button *ngFor="let f of floors; let i = index" 
+            [ngClass]="floor == f ? 'mat-raised-button floor-button' : 'floor-button'" 
+            (click)="selectFloor(i)">
+            {{floor.name.length ? floor.name : i+1}}
+        </button>
+        <button mat-button (click)="createFloor()">
+            <mat-icon>add_circle_outline</mat-icon> New floor
+        </button>
+        <button mat-button (click)="createFloor(floor)">
+            <mat-icon>control_point_duplicate</mat-icon> Clone floor
+        </button>
+    </p>
     <!--<pre>{{this?.floor | json}}</pre>-->
 </form>
 
